@@ -8,7 +8,7 @@
 // Template, add newest changes here
 
 === Beats version HEAD
-https://github.com/elastic/beats/compare/v1.2.3...1.2[Check the HEAD diff]
+https://github.com/elastic/beats/compare/v1.2.3...1.3[Check the HEAD diff]
 
 ==== Breaking changes
 
@@ -26,6 +26,7 @@ https://github.com/elastic/beats/compare/v1.2.3...1.2[Check the HEAD diff]
 ==== Bugfixes
 
 *Affecting all Beats*
+- Fix output modes backoff counter reset. {issue}1803[1803] {pull}1814[1814] {pull}1818[1818]
 
 *Packetbeat*
 
